--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,8 @@
+@import 'libs/bootstrap-reboot.min';
+@import 'libs/fonts';
+@import 'libs/tiny-slider';
+@import 'libs/animate';
+
 @import 'base/variables'; /*не забувай класти лапки*/
 @import 'base/animations';
 * {
